# seeker

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/api/: ingest.py
apps/api/app/ingest/: chunker.py  embedder.py  parser.py  pipeline.py
apps/api/app/models/: schemas.py
apps/api/app/retrieval/: qdrant.py
apps/api/tests/: test_chunker.py  test_health.py  test_integration_skipped.py  test_parser.py
apps/web/: .gitignore  README.md  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/chat/_components/: chat-shell.tsx  composer.tsx  empty-state.tsx  message-item.tsx  message-list.tsx  model-picker.tsx  sidebar.tsx
apps/web/lib/: mock-messages.ts  models.ts  types.ts
