[project]
name = "seeker-api"
version = "0.1.0"
description = "Seeker API service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.7.1",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "ruff>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "UP",
  "SIM",
  "C4",
  "N",
  "T20",
  "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
